--- a/app/test/templates/base.html
+++ b/app/test/templates/base.html
@@ -17,7 +17,76 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-
+    <style>
+        table {
+            width: intrinsic;
+            width: fit-content !important;
+            margin-bottom: 20px;
+            font-size: 14px;
+            background-color: transparent;
+            border: 1px solid #b9b9b9;
+            color: #000;
+            border-radius: 3px;
+            overflow-x: auto;
+            display: block;
+            max-width: 100%
+        }
+        
+        @media screen and (min-width: 700px) {
+            table {
+                max-width:calc(100vw - (100vw - 100%)/2 - 30px)
+            }
+        }
+        
+        table thead tr {
+            font-size: 15px
+        }
+        
+        table thead tr th {
+            font-weight: 700;
+            background-color: #b0c4de
+        }
+        
+        table thead tr th:first-child {
+            border-top-left-radius: 3px
+        }
+        
+        table thead tr th:last-child {
+            border-top-right-radius: 3px
+        }
+        
+        table thead tr.bg-gray>th {
+            background-color: #cecece
+        }
+        
+        table tbody tr:nth-of-type(even) {
+            background-color: #f8f8f8
+        }
+        
+        table tbody tr:last-child td:first-child {
+            border-bottom-left-radius: 3px
+        }
+        
+        table tbody tr:last-child td:last-child {
+            border-bottom-right-radius: 3px
+        }
+        
+        table tbody tr:last-child td {
+            border-bottom: none
+        }
+        
+        table tr {
+            border-radius: 3px
+        }
+        
+        th {
+            background: #cfcfcf;
+        }
+        
+        tr * {
+            border: 1px solid #cccccc;
+        }
+    </style>
     </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -29,29 +98,10 @@
     
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">Dropdown</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
+                    <a class="nav-link" href="/upload/">Upload</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
     {% block content %}
