--- a/app/test/templates/base.html
+++ b/app/test/templates/base.html
@@ -1,114 +1,128 @@
 <html lang="en">
-
-<head>
+  <head>
     <title>{% block title %}{% endblock %}</title>
 
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
 
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
     <style>
-        table {
-            width: intrinsic;
-            width: fit-content !important;
-            margin-bottom: 20px;
-            font-size: 14px;
-            background-color: transparent;
-            border: 1px solid #b9b9b9;
-            color: #000;
-            border-radius: 3px;
-            overflow-x: auto;
-            display: block;
-            max-width: 100%
-        }
-        
-        @media screen and (min-width: 700px) {
-            table {
-                max-width:calc(100vw - (100vw - 100%)/2 - 30px)
-            }
-        }
-        
-        table thead tr {
-            font-size: 15px
-        }
-        
-        table thead tr th {
-            font-weight: 700;
-            background-color: #b0c4de
-        }
-        
-        table thead tr th:first-child {
-            border-top-left-radius: 3px
-        }
-        
-        table thead tr th:last-child {
-            border-top-right-radius: 3px
-        }
-        
-        table thead tr.bg-gray>th {
-            background-color: #cecece
-        }
-        
-        table tbody tr:nth-of-type(even) {
-            background-color: #f8f8f8
-        }
-        
-        table tbody tr:last-child td:first-child {
-            border-bottom-left-radius: 3px
-        }
-        
-        table tbody tr:last-child td:last-child {
-            border-bottom-right-radius: 3px
-        }
-        
-        table tbody tr:last-child td {
-            border-bottom: none
-        }
-        
-        table tr {
-            border-radius: 3px
-        }
-        
-        th {
-            background: #cfcfcf;
-        }
-        
-        tr * {
-            border: 1px solid #cccccc;
-        }
-    </style>
-    </head>
-<body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">COMPANY ©</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/upload/">Upload</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    {% block content %}
-    {% endblock %}
-    <footer class="container">
-        <p>&copy; Company 2023</p>
-    </footer>
-</body>
+      table {
+        width: intrinsic;
+        width: fit-content !important;
+        margin-bottom: 20px;
+        font-size: 14px;
+        background-color: transparent;
+        border: 1px solid #b9b9b9;
+        color: #000;
+        border-radius: 3px;
+        overflow-x: auto;
+        display: block;
+        max-width: 100%;
+      }
 
+      @media screen and (min-width: 700px) {
+        table {
+          max-width: calc(100vw - (100vw - 100%) / 2 - 30px);
+        }
+      }
+
+      table thead tr {
+        font-size: 15px;
+      }
+
+      table thead tr th {
+        font-weight: 700;
+        background-color: #b0c4de;
+      }
+
+      table thead tr th:first-child {
+        border-top-left-radius: 3px;
+      }
+
+      table thead tr th:last-child {
+        border-top-right-radius: 3px;
+      }
+
+      table thead tr.bg-gray > th {
+        background-color: #cecece;
+      }
+
+      table tbody tr:nth-of-type(even) {
+        background-color: #f8f8f8;
+      }
+
+      table tbody tr:last-child td:first-child {
+        border-bottom-left-radius: 3px;
+      }
+
+      table tbody tr:last-child td:last-child {
+        border-bottom-right-radius: 3px;
+      }
+
+      table tbody tr:last-child td {
+        border-bottom: none;
+      }
+
+      table tr {
+        border-radius: 3px;
+      }
+
+      th {
+        background: #cfcfcf;
+      }
+
+      tr * {
+        border: 1px solid #cccccc;
+      }
+    </style>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="#">COMPANY ©</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarsExampleDefault"
+        aria-controls="navbarsExampleDefault"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/upload/">Upload</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    {% block content %} {% endblock %}
+    <footer class="container">
+      <p>&copy; Company 2023</p>
+    </footer>
+  </body>
 </html>
