--- a/app/test/templates/failed.html
+++ b/app/test/templates/failed.html
@@ -1,30 +1,28 @@
-{% extends 'base.html' %}
-
-{% block title %} Upload your file {% endblock %}
-
-{% block content %}
+{% extends 'base.html' %} {% block title %} Upload your file {% endblock %} {%
+block content %}
 <main role="main">
-    <div class="jumbotron">
-        <div class="container">
-            <h1 class="display-3 green">¡Complete!</h1>
-            <p>We have imported your contact list, but next contacts were duplicated and not imported.</p>
-            <table class="table">
-                <tr>
-                    <th>full_name</th>
-                    <th>primary_number</th>
-                    <th>secondary_number</th>
-                </tr>
-                {% for o in duplicates_index_list %}
-                    <tr>
-                        <td>{{o.full_name}}</td>
-                        <td>{{o.primary_number}}</td>
-                        <td>{{o.secondary_number}}</td>
-                    </tr>
-                {% endfor %}
-            </table>
-        </div>
+  <div class="jumbotron">
+    <div class="container">
+      <h1 class="display-3 green">¡Complete!</h1>
+      <p>
+        We have imported your contact list, but next contacts were duplicated
+        and not imported.
+      </p>
+      <table class="table">
+        <tr>
+          <th>full_name</th>
+          <th>primary_number</th>
+          <th>secondary_number</th>
+        </tr>
+        {% for o in duplicates_index_list %}
+        <tr>
+          <td>{{o.full_name}}</td>
+          <td>{{o.primary_number}}</td>
+          <td>{{o.secondary_number}}</td>
+        </tr>
+        {% endfor %}
+      </table>
     </div>
+  </div>
 </main>
 {% endblock %}
-
-
