[APP|FIX] Normalized before and bug in normalize

--- a/app/test/templates/upload_form.html
+++ b/app/test/templates/upload_form.html
@@ -1,31 +1,25 @@
 {% extends 'base.html' %}
-
-{% block title %} Upload your file {% endblock %}
-
-{% block content %}
-<main role="main">
-    <div class="jumbotron">
-        <div class="container">
-            <h1 class="display-3">¡WELCOME!</h1>
-            <p>Upload an Excel file with the following format: full_name, primary_number, secondary_number</p>
-            <div class="form-inline">
-                <form action="{% url 'upload' %}" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <table>
-                        {{ form }}
-                    </table>
-                    <input type="submit" value="Submit" class="btn btn-primary btn-lg">
-                </form>
-            </div>
-            {% if form.errors %}
-                <h3>Upload failed</h3>
-                <div class="alert alert-danger">
-                    {{ form.errors }}
-                </div>
-            {% endif %}
-        </div>
-    </div>
-</main>
+{% block title %}
+  Upload your file
 {% endblock %}
-
-
+{% block content %}
+  <main role="main">
+    <div class="jumbotron">
+      <div class="container">
+        <h1 class="display-3">¡WELCOME!</h1>
+        <p>Upload an Excel file with the following format: full_name, primary_number, secondary_number</p>
+        <div class="form-inline">
+          <form action="{% url 'upload' %}" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <table>{{ form }}</table>
+            <input type="submit" value="Submit" class="btn btn-primary btn-lg" />
+          </form>
+        </div>
+        {% if form.errors %}
+          <h3>Upload failed</h3>
+          <div class="alert alert-danger">{{ form.errors }}</div>
+        {% endif %}
+      </div>
+    </div>
+  </main>
+{% endblock %}
