[APP|MOD] Improved data save

--- a/app/test/templates/success.html
+++ b/app/test/templates/success.html
@@ -6,8 +6,7 @@
   <main role="main">
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-3 green">¡UPLOAD COMPLETE!</h1>
-        <p>List of constacts</p>
+        <h1 class="display-3 green">Contact list</h1>
         <div id="contacts_table">
           {{ phone_book_html }}
         </div>
